# 2026_CDP

./: .gitignore  NOTICE.md  README.md
docs/: ARCHITECTURE.md  RUNBOOK.md  portfolio_notion.txt
safecar/safecar_comms/: OWNER.md  package.xml  setup.cfg  setup.py
safecar/safecar_comms/safecar_comms/: sensor_bridge_node.py
safecar/safecar_control/: OWNER.md  package.xml  setup.cfg  setup.py
safecar/safecar_control/safecar_control/: decision_maker.py  decision_maker_node.py  lane_follower_node.py
safecar/safecar_dashboard/: OWNER.md  README.md  package.xml  setup.cfg  setup.py
safecar/safecar_msgs/: OWNER.md  package.xml  setup.cfg  setup.py
safecar/safecar_msgs/safecar_msgs/: command_protocol.py
safecar/safecar_perception/: OWNER.md  package.xml  setup.cfg  setup.py
safecar/safecar_perception/safecar_perception/: mock_obstacle_node.py  test_video.py  ufld_hailo_node.py  vision_detector.py  vision_detector_node.py
safecar_bringup/: OWNER.md  package.xml  setup.cfg  setup.py
safecar_bringup/launch/: manual_drive.launch.py  safecar.launch.py
stella/stella_ahrs/: package.xml
stella/stella_ahrs/mw/: mw_ahrs.cpp
stella/stella_ahrs/src/: listener.cpp
stella/stella_md/: package.xml
stella/stella_md/include/mw/: stella.hpp
stella/stella_md/launch/: stella_md_launch.py
stella/stella_md/mw/: stella.cpp
stella/stella_md/src/: main.cpp  main.hpp
stella/ydlidar_ros/params/: ydlidar.yaml
stella_bringup/: create_udev_rules.sh  delete_udev_rules.sh  package.xml  stella.rules
stella_bringup/launch/: robot.launch.py  stella_state_publisher.launch.py
stella_description/: package.xml
stella_description/urdf/: stella.urdf
stella_hailo_rpi5_ros2_examples/: ReadMe.md  install_ros2.sh  package.xml  setup.cfg  setup.py
stella_hailo_rpi5_ros2_examples/launch/: hailo_ros2_detection_launch.py
stella_hailo_rpi5_ros2_examples/stella_hailo_rpi5_ros2_examples/: color_config.py  hailo_ros2_detection_node.py
stella_teleop_bluetooth/: package.xml  setup.cfg  setup.py
